fix duplicate symbol errors

--- a/default/ios/Podfile
+++ b/default/ios/Podfile
@@ -29,3 +29,13 @@ target "ReactNativeFFmpegTest" do
   pod 'RNFS', :path => '../node_modules/react-native-fs'
 
 end
+
+# do not allow Cocoapods to manage React dependencies
+post_install do |installer|
+    installer.pods_project.targets.each do |target|
+      targets_to_ignore = %w(React yoga)
+      if targets_to_ignore.include? target.name
+        target.remove_from_project
+      end
+    end
+end
