--- a/default/ios/ReactNativeFFmpegTest/Info.plist
+++ b/default/ios/ReactNativeFFmpegTest/Info.plist
@@ -21,7 +21,9 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>18</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Record video using device camera</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationWhenInUseUsageDescription</key>
