--- a/typescript/tsconfig.json
+++ b/typescript/tsconfig.json
@@ -1,30 +1,32 @@
 {
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "declaration": true,
-    "declarationDir": "dist",
-    "emitDecoratorMetadata": false,
-    "experimentalDecorators": false,
-    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": false,
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": false,
+    "diagnostics": true,
+    "forceConsistentCasingInFileNames": false,
     "importHelpers": true,
-    "jsx": "react",
-    "lib": ["es2015", "dom"],
-    "module": "esnext",
-    "moduleResolution": "node",
+    "noEmitOnError": true,
     "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
     "noImplicitReturns": true,
-    "noImplicitThis": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "outDir": "compiled",
     "pretty": true,
-    "removeComments": true,
-    "sourceMap": true,
     "strict": true,
-    "strictNullChecks": true,
-    "stripInternal": true,
-    "target": "es5"
+    "outDir": "./lib/dist",
+    "allowJs": false,
+    "target": "esnext",
+    "module": "commonjs",
+    "jsx": "react-native",
+    "declaration": true,
+    "skipLibCheck": true,
+    "types": [
+      "jest",
+      "lodash",
+      "react",
+      "react-native",
+      "react-test-renderer"
+    ]
   },
   "exclude": [
     "node_modules",
