--- a/typescript/package.json
+++ b/typescript/package.json
@@ -5,13 +5,11 @@
   "scripts": {
     "lint": "tslint -p \".\" -t stylish",
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest --coverage",
+    "test": "jest",
     "ios": "node node_modules/react-native/local-cli/cli.js run-ios",
     "android": "node node_modules/react-native/local-cli/cli.js run-android"
   },
   "dependencies": {
-    "@types/react-navigation": "^3.0.5",
-    "@types/react-native-ffmpeg": "file:../../react-native-ffmpeg",
     "react": "16.6.3",
     "react-native": "0.58.6",
     "react-native-ffmpeg": "file:../../react-native-ffmpeg",
@@ -20,15 +18,17 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.11",
-    "@types/react": "^16.8.7",
-    "@types/react-native": "^0.57.38",
+    "@types/react": "^16.8.8",
+    "@types/react-native": "^0.57.40",
+    "@types/react-native-ffmpeg": "file:../../react-native-ffmpeg",
+    "@types/react-navigation": "^3.0.5",
     "@types/react-test-renderer": "^16.8.1",
-    "babel-core": "^7.0.0-bridge.0",
+    "babel-core": "^6.26.3",
     "babel-jest": "24.3.1",
-    "jest": "^24.3.1",
+    "jest": "^24.5.0",
     "metro-react-native-babel-preset": "0.53.0",
     "react-native-typescript-transformer": "^1.2.12",
-    "react-test-renderer": "^16.6.3",
+    "react-test-renderer": "^16.8.1",
     "ts-jest": "^24.0.0",
     "tslint": "^5.13.1",
     "tslint-eslint-rules": "^5.4.0",
@@ -42,15 +42,19 @@
       "./jest/setup.js"
     ],
     "transform": {
-      "^.+\\.tsx?$": "ts-jest"
+      "^.+\\.tsx?$": "ts-jest",
+      "^.+\\.(js)$": "babel-jest"
     },
+    "testRegex": "(/src/.*\\.(test|spec))\\.(jsx?|tsx?)$",
+    "testPathIgnorePatterns": [
+      "\\.snap$",
+      "<rootDir>/node_modules/"
+    ],
+    "cacheDirectory": ".jest/cache",
     "moduleFileExtensions": [
       "ts",
       "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
+      "js"
     ]
   }
 }
