--- a/typescript/tsconfig.json
+++ b/typescript/tsconfig.json
@@ -2,6 +2,18 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
-    "jsx": "react-native"
-  }
+    "moduleResolution": "node",
+    "jsx": "react-native",
+    "outDir": "./dist",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "declaration": true,
+    "noUnusedLocals": true
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
