--- a/typescript/tsconfig.json
+++ b/typescript/tsconfig.json
@@ -1,19 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "esnext",
     "module": "commonjs",
     "moduleResolution": "node",
-    "jsx": "react-native",
-    "outDir": "./dist",
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "declaration": true,
-    "noUnusedLocals": true
-  },
-  "exclude": [
-    "node_modules"
-  ]
+    "jsx": "react",
+    "allowSyntheticDefaultImports": true
+  }
 }
