--- a/default/package.json
+++ b/default/package.json
@@ -1,16 +1,16 @@
 {
   "name": "ReactNativeFFmpegTest",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "postinstall": "sed -i '' 's\/#import <RCTAnimation\\/RCTValueAnimatedNode.h>\/#import \"RCTValueAnimatedNode.h\"\/' ./node_modules/react-native/Libraries/NativeAnimation/RCTNativeAnimatedNodesManager.h"
   },
   "dependencies": {
-    "react": "16.6",
-    "react-native": "^0.57",
-    "react-native-ffmpeg": "^0.3.1",
-    "react-native-fs": "^2.12.1",
+    "react": "16.8",
+    "react-native": "^0.59",
+    "react-native-ffmpeg": "file:../../react-native-ffmpeg",
+    "react-native-fs": "^2.13.3",
     "react-navigation": "^2.6.2"
   }
 }
