update test application versions

--- a/default/ios/Podfile
+++ b/default/ios/Podfile
@@ -4,7 +4,6 @@ target "ReactNativeFFmpegTest" do
 
   pod 'React', :path => '../node_modules/react-native', :subspecs => [
     'Core',
-    'jschelpers',
     'cxxreact',
     'CxxBridge', # Include this for RN >= 0.47
     'DevSupport', # Include this to enable In-App Devmenu if RN >= 0.43
@@ -24,7 +23,7 @@ target "ReactNativeFFmpegTest" do
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
 
-  pod 'react-native-ffmpeg', :podspec => '../node_modules/react-native-ffmpeg/ios/react-native-ffmpeg.podspec'
+  pod 'react-native-ffmpeg/full', :podspec => '../node_modules/react-native-ffmpeg/ios/react-native-ffmpeg.podspec'
 
   pod 'RNFS', :path => '../node_modules/react-native-fs'
 
