--- a/default/package.json
+++ b/default/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "react": "16.8",
     "react-native": "^0.59",
-    "react-native-ffmpeg": "file:../../react-native-ffmpeg",
+    "react-native-ffmpeg": "^0.3.2",
     "react-native-fs": "^2.13.3",
     "react-navigation": "^2.6.2"
   }
