--- a/ios-frameworks/ios/Podfile
+++ b/ios-frameworks/ios/Podfile
@@ -6,7 +6,6 @@ target "ReactNativeFFmpegIOSFrameworkTest" do
 
   pod 'React', :path => '../node_modules/react-native', :subspecs => [
     'Core',
-    'jschelpers',
     'cxxreact',
     'CxxBridge', # Include this for RN >= 0.47
     'DevSupport', # Include this to enable In-App Devmenu if RN >= 0.43
@@ -26,6 +25,6 @@ target "ReactNativeFFmpegIOSFrameworkTest" do
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
 
-  pod 'react-native-ffmpeg', :podspec => '../node_modules/react-native-ffmpeg/ios/react-native-ffmpeg.podspec'
+  pod 'react-native-ffmpeg/min-lts', :podspec => '../node_modules/react-native-ffmpeg/ios/react-native-ffmpeg.podspec'
 
 end
