--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ReactNativeFFmpegTest",
-  "version": "0.0.1",
+  "name": "react-native-ffmpeg-test",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "lint": "tslint -p \".\" -t stylish",
@@ -10,31 +10,31 @@
     "android": "node node_modules/react-native/local-cli/cli.js run-android"
   },
   "dependencies": {
-    "react": "16.8.6",
-    "react-native": "^0.59.3",
+    "react": "^16.8.6",
+    "react-native": "^0.59.8",
     "react-native-ffmpeg": "^0.3.2",
     "react-native-fs": "^2.13.3",
     "react-native-gesture-handler": "^1.1.0",
-    "react-navigation": "^3.3.2"
+    "react-navigation": "^3.10.2"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.14",
-    "@types/react": "^16.8.4",
-    "@types/react-native": "^0.57.40",
+    "@types/jest": "^24.0.13",
+    "@types/react": "^16.8.17",
+    "@types/react-native": "^0.57.57",
     "@types/react-native-ffmpeg": "file:../../react-native-ffmpeg",
-    "@types/react-navigation": "^3.0.5",
+    "@types/react-navigation": "^3.0.7",
     "@types/react-test-renderer": "^16.8.1",
     "babel-core": "^6.26.3",
-    "babel-jest": "23.6.0",
+    "babel-jest": "24.8.0",
     "babel-preset-react-native": "^5.0.2",
-    "jest": "^23.6.0",
+    "jest": "^24.8.0",
     "react-native-typescript-transformer": "^1.2.12",
-    "react-test-renderer": "^16.8.1",
-    "ts-jest": "^23.10.5",
-    "tslint": "^5.13.1",
+    "react-test-renderer": "^16.8.6",
+    "ts-jest": "^24.0.2",
+    "tslint": "^5.16.0",
     "tslint-eslint-rules": "^5.4.0",
-    "tslint-react": "^3.6.0",
+    "tslint-react": "^4.0.0",
     "tslint-react-recommended": "^1.0.15",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.4.5"
   }
 }
