--- a/default/android/app/src/main/AndroidManifest.xml
+++ b/default/android/app/src/main/AndroidManifest.xml
@@ -11,8 +11,7 @@
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:allowBackup="false"
-      android:theme="@style/AppTheme"
-      tools:replace="android:allowBackup">
+      android:theme="@style/AppTheme">
 
       <activity
         android:name=".MainActivity"
