--- a/default/package.json
+++ b/default/package.json
@@ -1,16 +1,32 @@
 {
   "name": "react-native-ffmpeg-test",
-  "version": "0.0.10",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "postinstall": "sed -i '' 's\/#import <RCTAnimation\\/RCTValueAnimatedNode.h>\/#import \"RCTValueAnimatedNode.h\"\/' ./node_modules/react-native/Libraries/NativeAnimation/RCTNativeAnimatedNodesManager.h"
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "react": "^16.8.6",
-    "react-native": "^0.59.8",
+    "react": "16.8.6",
+    "react-native": "0.60.3",
     "react-native-ffmpeg": "^0.3.4",
     "react-native-fs": "^2.13.3",
-    "react-navigation": "^2.18.3"
+    "react-native-gesture-handler": "^1.3.0",
+    "react-navigation": "^3.11.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.5.4",
+    "@babel/runtime": "^7.5.4",
+    "@react-native-community/eslint-config": "^0.0.5",
+    "babel-jest": "^24.8.0",
+    "eslint": "^6.0.1",
+    "jest": "^24.8.0",
+    "metro-react-native-babel-preset": "^0.55.0",
+    "react-test-renderer": "16.8.6"
+  },
+  "jest": {
+    "preset": "react-native"
   }
+
 }
