--- a/ios-frameworks/ios/ReactNativeFFmpegIOSFrameworkTest.xcodeproj/xcshareddata/xcschemes/ReactNativeFFmpegIOSFrameworkTest.xcscheme
+++ b/ios-frameworks/ios/ReactNativeFFmpegIOSFrameworkTest.xcodeproj/xcshareddata/xcschemes/ReactNativeFFmpegIOSFrameworkTest.xcscheme
@@ -34,6 +34,20 @@
                ReferencedContainer = "container:ReactNativeFFmpegIOSFrameworkTest.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "00E356ED1AD99517003FC87E"
+               BuildableName = "ReactNativeFFmpegIOSFrameworkTestTests.xctest"
+               BlueprintName = "ReactNativeFFmpegIOSFrameworkTestTests"
+               ReferencedContainer = "container:ReactNativeFFmpegIOSFrameworkTest.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -42,6 +56,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "00E356ED1AD99517003FC87E"
+               BuildableName = "ReactNativeFFmpegIOSFrameworkTestTests.xctest"
+               BlueprintName = "ReactNativeFFmpegIOSFrameworkTestTests"
+               ReferencedContainer = "container:ReactNativeFFmpegIOSFrameworkTest.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
