--- a/ios-frameworks/package.json
+++ b/ios-frameworks/package.json
@@ -1,15 +1,17 @@
 {
   "name": "react-native-ffmpeg-test",
-  "version": "0.0.5",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "postinstall": "sed -i '' 's\/#import <RCTAnimation\\/RCTValueAnimatedNode.h>\/#import \"RCTValueAnimatedNode.h\"\/' ./node_modules/react-native/Libraries/NativeAnimation/RCTNativeAnimatedNodesManager.h"
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "react": "^16.8.6",
-    "react-native": "^0.59.8",
+    "react": "16.8.6",
+    "react-native": "0.60.3",
     "react-native-ffmpeg": "^0.3.4",
-    "react-navigation": "^2.18.3"
+    "react-native-gesture-handler": "^1.3.0",
+    "react-navigation": "^3.11.1"
   }
 }
