--- a/typescript/android/settings.gradle
+++ b/typescript/android/settings.gradle
@@ -1,9 +1,3 @@
 rootProject.name = 'ReactNativeFFmpegTest'
-
-include ':react-native-ffmpeg'
-project(':react-native-ffmpeg').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-ffmpeg/android')
-
-include ':react-native-fs'
-project(':react-native-fs').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-fs/android')
-
+apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
