--- a/default/package.json
+++ b/default/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-ffmpeg-test",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "start": "react-native start",
@@ -10,7 +10,7 @@
   "dependencies": {
     "react": "16.8.6",
     "react-native": "0.60.3",
-    "react-native-ffmpeg": "^0.3.4",
+    "react-native-ffmpeg": "0.3.5",
     "react-native-fs": "^2.13.3",
     "react-native-gesture-handler": "^1.3.0",
     "react-navigation": "^3.11.1"
