--- a/typescript/package.json
+++ b/typescript/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "react": "16.8.6",
     "react-native": "0.60.3",
-    "react-native-ffmpeg": "^0.3.4",
+    "react-native-ffmpeg": "0.3.5",
     "react-native-fs": "^2.13.3",
     "react-native-gesture-handler": "^1.3.0",
     "react-navigation": "^3.11.1"
@@ -28,6 +28,7 @@
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.55.0",
     "react-test-renderer": "16.8.6",
+    "ts-jest": "^24.0.2",
     "typescript": "^3.5.3"
   },
   "jest": {
