--- a/default/package.json
+++ b/default/package.json
@@ -9,18 +9,18 @@
   },
   "dependencies": {
     "react": "16.8.6",
-    "react-native": "0.60.3",
+    "react-native": "0.60.5",
     "react-native-ffmpeg": "0.3.5",
-    "react-native-fs": "^2.13.3",
+    "react-native-fs": "^2.14.1",
     "react-native-gesture-handler": "^1.3.0",
     "react-navigation": "^3.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
     "@babel/runtime": "^7.5.4",
-    "@react-native-community/eslint-config": "^0.0.5",
     "babel-jest": "^24.8.0",
-    "eslint": "^6.0.1",
+    "eslint": "^6.2.2",
+    "eslint-plugin-react-native": "^3.7.0",
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.55.0",
     "react-test-renderer": "16.8.6"
@@ -28,5 +28,4 @@
   "jest": {
     "preset": "react-native"
   }
-
 }
