--- a/default/package.json
+++ b/default/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "react": "16.10.2",
     "react-native": "0.61.2",
-    "react-native-ffmpeg": "0.4.3",
+    "react-native-ffmpeg": "0.4.4",
     "react-native-fs": "^2.16.1",
-    "react-native-gesture-handler": "^1.4.1",
+    "react-native-gesture-handler": "^1.6.0",
+    "react-native-reanimated": "^1.7.0",
+    "react-native-screens": "^2.2.0",
     "react-navigation": "^3.11.1"
   },
   "devDependencies": {
