--- a/default/package.json
+++ b/default/package.json
@@ -15,7 +15,8 @@
     "react-native-gesture-handler": "^1.6.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-screens": "^2.2.0",
-    "react-navigation": "^3.11.1"
+    "react-navigation": "^3.11.1",
+    "logkitty": "^0.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
