--- a/ios-frameworks/package.json
+++ b/ios-frameworks/package.json
@@ -12,7 +12,8 @@
     "react-native": "0.61.2",
     "react-native-ffmpeg": "0.4.0",
     "react-native-gesture-handler": "^1.4.1",
-    "react-navigation": "^3.11.1"
+    "react-navigation": "^3.11.1",
+    "logkitty": "^0.7.1"
   },
   "resolutions": {
     "**/**/minimist": "^1.2.2"
