--- a/typescript/package.json
+++ b/typescript/package.json
@@ -13,7 +13,8 @@
     "react-native-ffmpeg": "0.4.0",
     "react-native-fs": "^2.16.1",
     "react-native-gesture-handler": "^1.4.1",
-    "react-navigation": "^3.11.1"
+    "react-navigation": "^3.11.1",
+    "logkitty": "^0.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
