test development branch in default test app

--- a/default/ios/Podfile
+++ b/default/ios/Podfile
@@ -1,4 +1,4 @@
-platform :ios, '9.3'
+platform :ios, '11.0'
 
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
@@ -32,7 +32,7 @@ target "ReactNativeFFmpegTest" do
   pod 'React-jsi', :path => '../node_modules/react-native/ReactCommon/jsi'
   pod 'React-jsiexecutor', :path => '../node_modules/react-native/ReactCommon/jsiexecutor'
   pod 'React-jsinspector', :path => '../node_modules/react-native/ReactCommon/jsinspector'
-  pod 'ReactCommon/jscallinvoker', :path => "../node_modules/react-native/ReactCommon"
+  pod 'React-callinvoker', :path => "../node_modules/react-native/ReactCommon/callinvoker"
   pod 'ReactCommon/turbomodule/core', :path => "../node_modules/react-native/ReactCommon"
   pod 'Yoga', :path => '../node_modules/react-native/ReactCommon/yoga'
 
