update test app

--- a/default/ios/Podfile
+++ b/default/ios/Podfile
@@ -42,4 +42,6 @@ target "ReactNativeFFmpegTest" do
 
   pod 'RNFS', :path => '../node_modules/react-native-fs'
 
+  pod 'react-native-video', :path => '../node_modules/react-native-video'
+
 end
