--- a/package.json
+++ b/package.json
@@ -3,34 +3,35 @@
   "version": "0.5.0",
   "private": true,
   "scripts": {
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/picker": "^1.8.0",
-    "@react-navigation/material-top-tabs": "^5.2.19",
-    "@react-navigation/native": "^5.7.6",
-    "logkitty": "^0.7.1",
-    "prop-types": "^15.7.2",
     "react": "16.13.1",
-    "react-native": "0.63.2",
-    "react-native-ffmpeg": "0.5.0",
+    "react-native": "0.63.4",
+    "@react-native-picker/picker": "^1.9.7",
+    "@react-navigation/material-top-tabs": "^5.3.10",
+    "@react-navigation/native": "^5.8.10",
+    "prop-types": "^15.7.2",
     "react-native-fs": "^2.16.6",
-    "react-native-gesture-handler": "^1.8.0",
-    "react-native-reanimated": "^1.13.1",
-    "react-native-screens": "^2.11.0",
+    "react-native-ffmpeg": "0.5.1",
+    "react-native-gesture-handler": "^1.9.0",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-screens": "^2.16.1",
     "react-native-tab-view": "^2.15.2",
     "react-native-video": "^5.1.0-alpha8"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.4",
-    "@babel/runtime": "^7.5.4",
-    "babel-jest": "^26.3.0",
-    "eslint": "^7.8.1",
-    "eslint-plugin-react-native": "^3.9.1",
-    "jest": "^26.3.0",
-    "metro-react-native-babel-preset": "^0.63.0",
+    "@babel/core": "^7.12.10",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "^7.16.0",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.64.0",
     "react-test-renderer": "16.13.1"
   },
   "jest": {
