--- a/android/build.gradle
+++ b/android/build.gradle
@@ -34,7 +34,7 @@ allprojects {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
         }
-
+        mavenCentral()
         google()
         jcenter()
     }
