--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@react-navigation/material-top-tabs": "^5.3.10",
     "@react-navigation/native": "^5.8.10",
     "node-fetch": "^2.6.1",
+    "xmldom": "^0.6.0",
     "prop-types": "^15.7.2",
-    "react": "16.13.1",
-    "react-native": "0.64.1",
+    "react": "^17.0.2",
+    "react-native": "^0.65.1",
     "react-native-ffmpeg": "0.5.1",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.9.0",
