--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-ffmpeg-test",
-  "version": "0.5.0",
+  "version": "0.5.2",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -18,7 +18,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-native": "^0.65.1",
-    "react-native-ffmpeg": "0.5.1",
+    "react-native-ffmpeg": "^0.5.2",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-reanimated": "^1.13.2",
