--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "@react-navigation/material-top-tabs": "^5.3.10",
     "@react-navigation/native": "^5.8.10",
     "node-fetch": "^2.6.1",
-    "xmldom": "^0.6.0",
     "prop-types": "^15.7.2",
-    "set-value": "^4.1.0",
     "react": "^17.0.2",
     "react-native": "^0.65.1",
     "react-native-ffmpeg": "^0.5.2",
@@ -25,7 +23,9 @@
     "react-native-reanimated": "^1.13.2",
     "react-native-screens": "^2.16.1",
     "react-native-tab-view": "^2.15.2",
-    "react-native-video": "^5.1.0-alpha8"
+    "react-native-video": "^5.1.0-alpha8",
+    "set-value": "^4.1.0",
+    "xmldom": "^0.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -35,6 +35,7 @@
     "eslint": "^7.16.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
+    "react-native-codegen": "^0.0.8",
     "react-test-renderer": "16.13.1"
   },
   "jest": {
